--- a/main.css
+++ b/main.css
@@ -1,9 +1,15 @@
 body {
     /* background: #684f4f; */
-    background: url('https://previews.123rf.com/images/hugolacasse/hugolacasse1705/hugolacasse170500025/79259650-blue-film-reel-movie-background-in-front-of-hollywood-city-at-night.jpg'),no-repeat center center cover;
+    background: url('https://previews.123rf.com/images/hugolacasse/hugolacasse1705/hugolacasse170500025/79259650-blue-film-reel-movie-background-in-front-of-hollywood-city-at-night.jpg');
+    /* background-repeat: no-repeat; */
+    /* background-size: cover; */
+    background-position: center;
 }
 .container {
-    
+    /* color: aliceblue !important; */
+}
+.title, .subtitle , strong {
+  color: #eee;
 }
 #root {
     max-width: 1200px;
@@ -21,6 +27,7 @@ body {
     padding: 20px;
     transition: 1s;
     box-shadow: 8px 2px 30px #000;
+    border-radius: 2em;
   }
   .card:nth-child(odd) h1 {
     background-image: linear-gradient(120deg, #22e265 0%, #137db3 100%);
